# state-consumer

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
migrations/2020-09-02-171622_initial/: down.sql  up.sql
migrations/2020-12-29-134458_add_value_fragments/: down.sql  up.sql
migrations/2021-01-26-142300_add_value_indexes/: down.sql  up.sql
migrations/2021-08-20-080426_history_queries/: down.sql  up.sql
migrations/2022-04-11-155217_add_data_entries_idxes/: down.sql  up.sql
src/: config.rs  db.rs  error.rs  main.rs  readiness.rs  schema.rs
src/data_entries/: api.rs  daemon.rs  mod.rs  repo.rs  updates.rs
