[package]
name = "state-consumer"
version = "1.0.1"
authors = ["Аleksej Petrov <apetrov@web3tech.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4" }
envy = "0.4"
tonic = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", rev = "b68a38cf6f89cd0b1b94c417da6217fd7a170de5" }
slog = "2.5"
slog-term = "2.6"
slog-async = "2.5"
slog-json = "2.3"
async-trait = "0.1"
once_cell = "1.4"
bs58 = "0.3"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono", "numeric", "64-column-tables"] }
r2d2 = "0.8"
base64 = "0.12"
itertools = "0.9"
anyhow = "1.0"
thiserror = "1.0"

[[bin]]
name = "service"
path = "src/main.rs"
