[package]
name = "state-consumer"
version = "1.1.2"
authors = ["Аleksej Petrov <apetrov@web3tech.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4" }
base64 = "0.12"
bs58 = "0.3"
diesel = { version = "2.0", features = ["chrono", "postgres", "r2d2", "chrono", "numeric", "64-column-tables"] }
envy = "0.4"
itertools = "0.9"
once_cell = "1.4"
prost = { version = "0.8", features = ["no-recursion-limit"] }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tonic = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.4.0" }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", rev = "dc1597077cbf55aac4cd514f5510ba346c45b361" }
warp = "0.3"
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.14.1" }

[[bin]]
name = "service"
path = "src/main.rs"
