[package]
name = "state-consumer"
version = "1.3.1"
authors = ["Аleksej Petrov <apetrov@web3tech.ru>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false }
base64 = "0.21"
bs58 = "0.5"
diesel = { version = "2.1", features = ["chrono", "postgres", "r2d2", "64-column-tables"] }
envy = "0.4"
itertools = "0.12"
once_cell = "1.4"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3", default-features = false }
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", tag = "rust_v1.5.2" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.14.10" }
wavesexchange_liveness = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_liveness/0.3.1" }

[[bin]]
name = "service"
path = "src/main.rs"
